--- a/SpecialLecture/.github/workflows/build.yml
+++ b/SpecialLecture/.github/workflows/build.yml
@@ -9,4 +9,4 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
       - name: Run Tests
-        run: python -m unittest /Users/nanako-m/Desktop/授業/特別講義A, C/課題2-2/test.py
+        run: python -m unittest test.py
