--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ jobs:
   on_build_actions:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/check@v2
+      - uses: actions/checkout@v2
       - name: Install dependancise
         run: |
           cd $GITHUB_WORKSPACE
