--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=mmm-nana_SpecialLecture3
 sonar.organization=mmm-nana
+sonar.python.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SpecialLecture3
